# quiz-bot

./: Procfile  README.md  bot_text.py  env_settings.py  pyproject.toml  questions.json  questions.py  redis_adapter.py  requirements.txt  run.py  telegram_bot.py  vk_bot.py
